fix: z-index fighting between `#trace` and `#output`

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -474,9 +474,10 @@ textarea::placeholder,
 	flex-wrap: nowrap;
 	align-content: center;
 	align-items: center;
-	position: sticky;
 	top: 0;
+	position: sticky;
 	background-color: var(--bg0);
+	z-index: 1;
 }
 
 #trace, #format {
